--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@google/genai": "^0.12.0",
     "@nuxt/eslint": "1.3.0",
     "@nuxt/fonts": "0.11.2",
     "@nuxt/icon": "1.12.0",
@@ -17,6 +18,7 @@
     "@nuxt/scripts": "0.11.6",
     "@nuxt/ui": "3.1.0",
     "@unhead/vue": "^2.0.3",
+    "@vueuse/nuxt": "13.1.0",
     "eslint": "^9.0.0",
     "nuxt": "^3.17.1",
     "typescript": "^5.6.3",
