--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "typescript": "^5.6.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@unocss/nuxt": "^66.1.0",
+    "unocss": "^66.1.0"
   }
 }
