--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vueuse/nuxt": "13.1.0",
     "eslint": "^9.0.0",
     "nuxt": "^3.17.1",
+    "reka-ui": "^2.2.1",
     "typescript": "^5.6.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
