--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@nuxt/icon": "1.12.0",
     "@nuxt/image": "1.10.0",
     "@nuxt/scripts": "0.11.6",
-    "@nuxt/ui": "3.1.0",
+    "@nuxt/ui": "^3.1.1",
+    "@nuxt/ui-pro": "^3.1.1",
     "@unhead/vue": "^2.0.3",
     "@unocss/reset": "^66.1.0",
     "@vueuse/nuxt": "13.1.0",
